--- a/Requirements.txt
+++ b/Requirements.txt
@@ -3,3 +3,13 @@ Memberships
 * User should see link for Pro plan on home page
 * Basic plan link should point to the regular devise sign up form
 * Pro plan link should point to custom sign up form
+
+Stripe Integration
+* Users should have a stripe customer token
+* Javascript should prevent Pro form from submitting, when users fill it out,
+and should send card info to stripe. Stripe will return with a card token
+* Javascript should send user fields and card token to our rails app. Rails app
+should validate the user fields. Rails app will note whether plan 1 or plan 2.
+* Once validated, rails should send user info (email, plan id) and card token to
+stripe server and stripe will create a subscription and send back a customer
+token. Rails should save customer token and user information to our database.
