--- a/Requirements.txt
+++ b/Requirements.txt
@@ -13,3 +13,10 @@ should validate the user fields. Rails app will note whether plan 1 or plan 2.
 * Once validated, rails should send user info (email, plan id) and card token to
 stripe server and stripe will create a subscription and send back a customer
 token. Rails should save customer token and user information to our database.
+
+User Profiles
+* Each user should have one profile
+* User should see a link to the new profile form upon signing up
+* Should be able create and view the user profile.
+* User should have a profile picture.
+* User should be able to view all user profiles
